[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lvsm"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "data*", "model*"]
exclude = ["scripts*", "configs*", "sout*", "experiments*"]